# cuFEM

./: CMakeLists.txt  batch
include/: CG.hpp  Handler.hpp  Timer.hpp  Vector.hpp
src/: CG.cu  main.cpp
